@@ -1,5 +1,17 @@
 2001-11-02  Jody Goldberg <jgoldberg@home.com>
 
+	* src/sheet-object-bonobo.c (open_cb) : support cancel.
+
+	* src/item-grid.c (item_grid_draw_merged_range) : honour the selection
+	  of objects.
+
+	* src/workbook-control-gui.c (cb_edit_select_all) : Use
+	  scg_select_all.
+
+	* src/sheet-control-gui.c (scg_select_all) : Make public.
+
+2001-11-02  Jody Goldberg <jgoldberg@home.com>
+
 	* src/workbook-control-gui.c (change_menu_label) : Verb level labels
 	  appear to work now.
 	(wbcg_menu_state_update) : ditto.
