@@ -3,7 +3,6 @@
 
 #include "gnumeric.h"
 
-void cmd_select_all	    (Sheet *sheet);
 void cmd_select_cur_row	    (Sheet *sheet);
 void cmd_select_cur_col	    (Sheet *sheet);
 void cmd_select_cur_array   (Sheet *sheet);
